k8s/04.infrastructure/02.gitlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: default
  labels:
    name: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
      version: 13.11.1-ee.0
  template:
    metadata:
      name: gitlab
      labels:
        app: gitlab
        version: 13.11.1-ee.0
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ee:13.11.1-ee.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 443
            - name: http
              containerPort: 80
            - name: ssh
              containerPort: 22
          volumeMounts:
            - mountPath: /var/log/gitlab
              name: log
            - mountPath: /var/opt/gitlab
              name: data
          livenessProbe:
            httpGet:
              path: /help
              port: http
            # This pod takes a very long time to start up. Be cautious when
            # lowering this value to avoid Pod death during startup.
            initialDelaySeconds: 200
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /help
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: data
          emptyDir: {}
        - name: log
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: default
  labels:
    app: gitlab
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
    - name: https
      port: 443
      targetPort: https
    - name: http
      port: 80
      targetPort: http
    - name: tcp-ssh
      port: 22
      targetPort: ssh
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitlab-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - gitlab.local.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab
  namespace: default
spec:
  hosts:
    - gitlab.local.com
  gateways:
    - gitlab-gateway
  http:
    - route:
        - destination:
            host: gitlab
            port:
              number: 80
